creating config files in src folder

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,7 +13,7 @@ services:
     image: postgres:13
     container_name: auth-backend-project-test-db
     env_file:
-      - .env.test
+      - .env
     environment:
       POSTGRES_PASSWORD: ${DB_TEST_PASSWORD:-postgres}
     ports:
